Wed Oct 20 04:17:55 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/dbm/dbm.c (fdbm_delete_if): should check if deleting element
	  is a string.  [ruby-dev:24490]

	* ext/sdbm/init.c (fsdbm_delete_if): ditto.

Wed Oct 20 01:37:18 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_times): Array#* should return an instance of
	  the class of right operand.  [ruby-dev:24526]

	* ext/zlib/zlib.c (zstream_detach_buffer): should not expose
	  class-less object to Ruby world. [ruby-dev:24530]

	* eval.c (proc_dup): provide Proc#dup as well.  [ruby-talk:116915]

	* eval.c (ruby_exec): stack marking position may be higher than
	  expected.  thanks to Guy Decoux.  [ruby-core:03527]

Wed Oct 20 00:25:41 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (search_required): required name must not be changed before
	  loading.  [ruby-dev:24492]

Tue Oct 19 23:59:46 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_require_safe): provide the feature after loaded.
	  [ruby-list:40085]

Tue Oct 19 22:43:12 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_attr): If
	  we come across 'attr' in a context where it isn't
	  followed by a symbol, just issue a warning.

Tue Oct 19 20:32:50 2004  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole.c(ole_invoke): retrieve the result value when
	  retrying the IDispatch::invoke.

Tue Oct 19 17:24:11 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (read_all): block string buffer modification during
	  rb_io_fread() by freezing it temporarily. [ruby-dev:24479]

	* dir.c (rb_push_glob): block call at once the end of method.
	  [ruby-dev:24487]

	* ext/enumerator/enumerator.c (enum_each_slice): remove
	  rb_gc_force_recycle() to prevent potential SEGV.
	  [ruby-dev:24499]

	* ext/zlib/zlib.c (zstream_expand_buffer): hide internal string
	  buffer by clearing klass.  [ruby-dev:24510]
